--- a/bin/backend/scheduler/templates/scheduler/test.html
+++ b/bin/backend/scheduler/templates/scheduler/test.html
@@ -102,6 +102,13 @@ table.table td .add {
     <div class="table-responsive">
         <div class="table-wrapper">
             <div class="table-title">
+                {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
                 <div class="row">
                     <div class="col-sm-8"><h2>Rotation Block <b>Details</b></h2></div>
                 </div>
